# fairmeme

./: .gitignore  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  README.md
apps/airdrop/: .env.example  .gitignore  Dockerfile  README.md  config.example.toml  go.mod  go.sum
apps/api/: .gitignore  .golangci.yml  Makefile  README.md  go.mod  go.sum
apps/indexer/: .env.example  .gitignore  README.md  build.sh  package.json  pnpm-lock.yaml  tsconfig.json
apps/listener/: .gitignore  README.md  config.example.yaml  go.mod  go.sum
apps/web/: .env.example  .gitignore  README.md  next-auth.d.ts  next.config.mjs
assets/token-metadata/: README.md
contracts/evm/: .gitignore  README.md  foundry.toml
contracts/solana/core/programs/fairmeme-sol/: Cargo.toml
contracts/solana/core/programs/fairmeme-sol/src/: errors.rs  lib.rs
contracts/solana/core/programs/fairmeme-sol/src/amm/: mod.rs
contracts/solana/core/programs/fairmeme-sol/src/instructions/: buy.rs  create.rs  events.rs  get_buy_price.rs  get_sell_price.rs  initialize.rs  mod.rs  sell.rs  set_global.rs  utils.rs
contracts/solana/core/programs/fairmeme-sol/src/state/: constants.rs  fairmeme_state.rs  global.rs  mod.rs
docs/audit/: AUDIT_FIX_REPORT_2026-05-20.md  AUDIT_FIX_REPORT_2026-05-20_ROUND2.md
docs/deployments/: FAIRMEME_ECS_PRODUCTION_README.md
infra/ecs/: fairmeme-airdrop.config.example.toml  fairmeme-airdrop.env.example  fairmeme-api.yml.example  fairmeme-backend.compose.yml  fairmeme-web.env.example
scripts/ecs/: deploy-backend.sh  deploy-web.sh  ops.sh  setup-ssl.sh
(+287 files in other folders)
